# LCM-Dreamshaper-V7-rs

./: Cargo.toml  README.md  dreamshaper.service
src/: main.rs  mcp.rs  models.rs  pipeline.rs  scheduler.rs  serve.rs
vscode-example/: mcp.json
