[package]
name = "lcm-dreamshaper-v7-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytemuck = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hf-hub = "0.3"
image = "0.25"
rand = "0.8"
rand_distr = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
rknn-rs = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3

[[bin]]
name = "dreamshaper-cli"
path = "src/main.rs"

